Create localStorage service and routes to private component

--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,1 +1,8 @@
 <p class="text-2xl font-bold text-orange-500">home works!</p>
+
+<button
+  class="bg-orange-500 text-zinc-100 p-3 rounded w-fit transition-colors hover:bg-orange-400"
+  [routerLink]="['/login']"
+>
+  Sair
+</button>
