--- a/src/app/modules/public/components/login/login.component.html
+++ b/src/app/modules/public/components/login/login.component.html
@@ -1,9 +1,18 @@
 <p class="text-2xl font-bold text-orange-500">login works!</p>
-<button
-  class="bg-orange-500 text-zinc-100 p-3 rounded w-fit transition-colors hover:bg-orange-400"
-  [routerLink]="['/register']"
->
-  Cadastro
-</button>
+
+<div class="flex flex-col gap-2 justify-center">
+  <button
+    class="bg-orange-500 text-zinc-100 p-3 rounded w-fit transition-colors hover:bg-orange-400"
+    [routerLink]="['/private/home']"
+  >
+    Fazer login
+  </button>
+  <button
+    class="bg-orange-500 text-zinc-100 p-3 rounded w-fit transition-colors hover:bg-orange-400"
+    [routerLink]="['/register']"
+  >
+    Cadastro
+  </button>
+</div>
 
 <router-outlet></router-outlet>
