--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,12 +1,15 @@
-<p class="text-2xl font-bold text-orange-500">home works!</p>
+<p class="text-2xl font-bold text-primary">home works!</p>
 <button
-  class="bg-orange-500 text-zinc-100 p-3 rounded w-fit transition-colors hover:bg-orange-400"
+  type="button"
+  data-te-ripple-init
+  data-te-ripple-color="light"
+  class="inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
   [routerLink]="['/login']"
 >
   Sair
 </button>
 
-<p class="text-2xl font-bold text-orange-500">testando server</p>
+<p class="text-2xl font-bold text-primary">testando server</p>
 
 <div class="flex flex-col gap-2 w-fit">
   <div
@@ -18,6 +21,6 @@
       [src]="restaurant.imagePath"
       alt="{{ restaurant.name }} logo"
     />
-    <p class="text-orange-500 font-bold text-base">{{ restaurant.name }}</p>
+    <p class="text-primary font-bold text-base">{{ restaurant.name }}</p>
   </div>
 </div>
