--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,26 +1,30 @@
-<button
-  type="button"
-  data-te-ripple-init
-  data-te-ripple-color="light"
-  class="inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
-  [routerLink]="['/login']"
-  (click)="logout()"
->
-  Sair
-</button>
+<app-header></app-header>
 
-<p class="text-2xl font-bold text-primary">testando server</p>
+<div class="w-full mt-0 mx-auto mb-12 pt-36">
+  <p class="text-2xl font-bold text-primary">testando server</p>
 
-<div class="flex flex-col gap-2 w-fit">
-  <div
-    class="flex justify-start items-center gap-2 bg-zinc-50 shadow-md rounded-lg p-2"
-    *ngFor="let restaurant of restaurantsList"
-  >
-    <img
-      class="w-14 rounded"
-      [src]="restaurant.imagePath"
-      alt="{{ restaurant.name }} logo"
-    />
-    <p class="text-primary font-bold text-base">{{ restaurant.name }}</p>
+  <div class="flex flex-col gap-28 w-fit">
+    <div
+      class="flex justify-start items-center gap-2 bg-zinc-50 shadow-md rounded-lg p-2"
+      *ngFor="let restaurant of restaurantsList"
+    >
+      <img
+        class="w-14 rounded"
+        [src]="restaurant.imagePath"
+        alt="{{ restaurant.name }} logo"
+      />
+      <p class="text-primary font-bold text-base">{{ restaurant.name }}</p>
+    </div>
   </div>
+
+  <button
+    type="button"
+    data-te-ripple-init
+    data-te-ripple-color="light"
+    class="inline-block rounded bg-primary px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]"
+    [routerLink]="['/login']"
+    (click)="logout()"
+  >
+    Sair
+  </button>
 </div>
