--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
 
-<div class="w-full mt-0 mx-auto mb-12 pt-36">
+<div class="w-full pt-36 pb-20 px-3">
   <p class="text-2xl font-bold text-primary">testando server</p>
 
-  <div class="flex flex-col gap-28 w-fit">
+  <div class="flex flex-col gap-2 w-fit">
     <div
       class="flex justify-start items-center gap-2 bg-zinc-50 shadow-md rounded-lg p-2"
       *ngFor="let restaurant of restaurantsList"
@@ -28,3 +28,5 @@
     Sair
   </button>
 </div>
+
+<app-navbar></app-navbar>
