Change bg-color of home component

--- a/src/app/modules/private/components/home/home.component.html
+++ b/src/app/modules/private/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="w-full max-w-5xl my-0 mx-auto px-3 lg:px-0 pt-36 pb-20">
+<div class="w-full max-w-5xl my-0 mx-auto px-3 lg:px-0 pt-36 pb-20 bg-white">
   <div class="my-0 mx-auto">
     <div class="max-w-5xl carousel rounded-box gap-2 lg:hidden">
       <div *ngFor="let slide of slides" class="carousel-item">
