--- a/src/app/modules/public/components/register/register.component.html
+++ b/src/app/modules/public/components/register/register.component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div
-    class="flex flex-col justify-center items-center gap-2 my-10 mx-12 w-full md:w-1/2 lg:w-1/3"
+    class="bg-white flex flex-col justify-center items-center gap-2 my-10 mx-12 w-full md:w-1/2 lg:w-1/3"
   >
     <img
       src="assets/img/logo/meat-logo-primary.png"
