--- a/src/app/modules/private/components/place-details/restaurant-details.component.html
+++ b/src/app/modules/private/components/place-details/restaurant-details.component.html
@@ -1,12 +1,12 @@
-<div class="w-full h-screen bg-white" *ngIf="loaded">
-  <div class="w-full h-56 bg-cover-imgBig bg-cover relative">
+<div class="w-full h-screen bg-white px-3" *ngIf="loaded">
+  <div class="w-full h-56 bg-cover-imgBig bg-cover absolute top-0 left-0">
     <div
       class="w-full h-56 bg-gradient-to-b from-black/20 to-transparent absolute top-0 left-0"
     ></div>
   </div>
 
   <a
-    class="w-10 h-10 bg-white shadow-mg fixed top-8 left-4 rounded-full flex items-center justify-center"
+    class="w-10 h-10 bg-white shadow-mg absolute top-4 rounded-full flex items-center justify-center"
     [routerLink]="['/private/home']"
   >
     <svg
@@ -22,9 +22,9 @@
     </svg>
   </a>
 
-  <div class="px-4 w-full flex flex-col justify-center items-center">
+  <div class="w-full flex flex-col justify-center items-center">
     <div
-      class="w-full max-w-[350px] flex flex-col gap-4 h-fit p-6 bg-white rounded-3xl shadow-xl absolute top-32"
+      class="w-full flex flex-col gap-4 h-fit p-6 bg-white rounded-3xl shadow-xl z-20 mt-40"
     >
       <div class="w-full flex justify-start items-center gap-6">
         <img
@@ -49,18 +49,22 @@
         <div class="w-fit flex flex-col items-start">
           <p class="text-xs text-zinc-600">Avaliação</p>
           <div class="w-fit flex justify-start items-center gap-1">
-            <div *ngFor="let rating of getRating(restaurantRating)">
+            <div class="flex justify-start items-center gap-1">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
+                width="14"
+                height="14"
                 viewBox="0 0 256 256"
-                class="fill-primary-600"
+                class="fill-primary-600 w-[14px] h-[14px]"
               >
                 <path
                   d="M234.5,114.38l-45.1,39.36,13.51,58.6a16,16,0,0,1-23.84,17.34l-51.11-31-51,31a16,16,0,0,1-23.84-17.34L66.61,153.8,21.5,114.38a16,16,0,0,1,9.11-28.06l59.46-5.15,23.21-55.36a15.95,15.95,0,0,1,29.44,0h0L166,81.17l59.44,5.15a16,16,0,0,1,9.11,28.06Z"
                 ></path>
               </svg>
+
+              <strong class="text-sm font-bold text-zinc-900">{{
+                restaurant.rating
+              }}</strong>
             </div>
           </div>
         </div>
