--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,21 @@
   font-family: "Inter", sans-serif;
 }
 
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #b1b1b1;
+}
+
 ::selection {
   background-color: #3b71ca;
   color: #fff;
