--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,20 +1,37 @@
 <div
   class="w-full h-fit bg-white gap-10 p-3 flex justify-center items-center fixed bottom-0 shadow-onTop rounded-onTop-xl"
 >
-  <a class="w-fit flex justify-center items-center flex-col cursor-pointer">
+  <a
+    class="w-fit flex justify-center items-center flex-col cursor-pointer"
+    [routerLink]="['/private/home']"
+  >
     <svg
       width="20"
       height="20"
       viewBox="0 0 20 20"
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
-      class="fill-primary-600 stroke-none w-5 h-5"
+      class="w-5 h-5"
+      [ngClass]="
+        homeIsActive
+          ? 'fill-primary-600 stroke-none'
+          : 'fill-none stroke-zinc-900'
+      "
     >
       <path
         d="M16.7 5.68495L11.9 2.32662C10.5917 1.40995 8.58333 1.45995 7.32499 2.43495L3.14999 5.69328C2.31666 6.34328 1.65833 7.67662 1.65833 8.72662V14.4766C1.65833 16.6016 3.38333 18.335 5.50833 18.335H14.4917C16.6167 18.335 18.3417 16.61 18.3417 14.485V8.83495C18.3417 7.70995 17.6167 6.32662 16.7 5.68495ZM10.625 15.0016C10.625 15.3433 10.3417 15.6266 9.99999 15.6266C9.65833 15.6266 9.37499 15.3433 9.37499 15.0016V12.5016C9.37499 12.16 9.65833 11.8766 9.99999 11.8766C10.3417 11.8766 10.625 12.16 10.625 12.5016V15.0016Z"
       />
     </svg>
-    <p class="text-xs text-primary-600 font-bold">home</p>
+    <p
+      class="text-xs"
+      [ngClass]="
+        homeIsActive
+          ? 'text-primary-600 font-bold'
+          : 'text-zinc-800 font-normal'
+      "
+    >
+      home
+    </p>
   </a>
   <a class="w-fit flex justify-center items-center flex-col cursor-pointer">
     <svg
@@ -34,14 +51,22 @@
     </svg>
     <p class="text-xs text-zinc-800 font-normal">pedidos</p>
   </a>
-  <a class="w-fit flex justify-center items-center flex-col cursor-pointer">
+  <a
+    class="w-fit flex justify-center items-center flex-col cursor-pointer"
+    [routerLink]="['/private/profile']"
+  >
     <svg
       width="24"
       height="25"
       viewBox="0 0 24 25"
       fill="none"
       xmlns="http://www.w3.org/2000/svg"
-      class="fill-none stroke-zinc-900 w-5 h-5"
+      class="w-5 h-5"
+      [ngClass]="
+        userProfileIsActive
+          ? 'fill-primary-600 stroke-primary-600'
+          : 'fill-none stroke-zinc-900'
+      "
     >
       <path
         d="M20 21.0707V19.0707C20 18.0099 19.5786 16.9925 18.8284 16.2423C18.0783 15.4922 17.0609 15.0707 16 15.0707H8C6.93913 15.0707 5.92172 15.4922 5.17157 16.2423C4.42143 16.9925 4 18.0099 4 19.0707V21.0707"
@@ -57,7 +82,16 @@
       />
     </svg>
 
-    <p class="text-xs text-zinc-800 font-normal">perfil</p>
+    <p
+      class="text-xs"
+      [ngClass]="
+        userProfileIsActive
+          ? 'text-primary-600 font-bold'
+          : 'text-zinc-800 font-normal'
+      "
+    >
+      perfil
+    </p>
   </a>
 </div>
 
