Resolving responsivity problems on restaurant details screen

--- a/src/app/modules/private/components/place-details/restaurant-details.component.html
+++ b/src/app/modules/private/components/place-details/restaurant-details.component.html
@@ -24,9 +24,9 @@
 
   <div class="w-full flex flex-col justify-center items-center">
     <div
-      class="w-full flex flex-col gap-4 h-fit p-6 bg-white rounded-3xl shadow-xl z-20 mt-32 mb-10"
+      class="w-full flex flex-col gap-4 h-fit p-6 bg-white rounded-3xl shadow-xl z-20 mt-32 mb-10 md:flex-row md:justify-start md:items-center"
     >
-      <div class="w-full flex justify-start items-center gap-6">
+      <div class="w-full flex justify-start items-center gap-6 md:min-w-fit">
         <img
           class="w-20 h-20 rounded-full border border-zinc-400"
           [src]="restaurant.imagePath"
@@ -77,8 +77,9 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-4 w-full mb-6">
+    <div class="flex flex-col gap-4 w-full mb-6 md:flex-row">
       <app-product-card
+        class="w-full"
         *ngFor="let product of products"
         [product]="product"
       ></app-product-card>
