Create checkout anchor component

--- a/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
+++ b/src/app/modules/private/components/restaurant-details/restaurant-details.component.html
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-4 w-full mb-6 md:flex-row">
+    <div class="flex flex-col gap-4 w-full mb-32 md:flex-row">
       <app-product-card
         class="w-full"
         *ngFor="let product of products"
@@ -86,3 +86,7 @@
     </div>
   </div>
 </div>
+
+<app-checkout-anchor></app-checkout-anchor>
+
+<app-navbar></app-navbar>
