[BUG-FIX] Fixing list of products on checkout page

--- a/src/app/modules/private/components/checkout/checkout.component.html
+++ b/src/app/modules/private/components/checkout/checkout.component.html
@@ -1,8 +1,10 @@
 <h1 class="text-primary-600 font-bold text-4xl mb-4">Checkout</h1>
 
 <ul>
-  <li *ngFor="let product of cartProducts" class="flex gap-1">
+  <li *ngFor="let product of products()" class="flex gap-1">
     <strong>{{ product.quantity }}x</strong>
     <p>{{ product.product.name }}</p>
   </li>
 </ul>
+
+<button (click)="clearShoppingCart()">Limpar carrinho</button>
