--- a/src/app/modules/private/components/checkout/checkout.component.html
+++ b/src/app/modules/private/components/checkout/checkout.component.html
@@ -1,4 +1,69 @@
-<h1 class="text-primary-600 font-bold text-4xl mb-4">Checkout</h1>
+<h1 class="text-black font-bold text-4xl mb-10">Checkout</h1>
+<h1 class="text-black font-bold text-xl mb-4">Como quer receber ?</h1>
+<div class="flex">
+  <!--First radio-->
+  <div class="mb-[0.125rem] mr-10 inline-block min-h-[1.5rem] pl-[1.5rem]">
+    <input
+      class="relative float-left -ml-[1.5rem] mr-1 mt-0.5 h-5 w-5 appearance-none rounded-full border-2 border-solid border-neutral-300 before:pointer-events-none before:absolute before:h-4 before:w-4 before:scale-0 before:rounded-full before:bg-transparent before:opacity-0 before:shadow-[0px_0px_0px_13px_transparent] before:content-[''] after:absolute after:z-[1] after:block after:h-4 after:w-4 after:rounded-full after:content-[''] checked:border-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:left-1/2 checked:after:top-1/2 checked:after:h-[0.625rem] checked:after:w-[0.625rem] checked:after:rounded-full checked:after:border-primary checked:after:bg-primary checked:after:content-[''] checked:after:[transform:translate(-50%,-50%)] hover:cursor-pointer hover:before:opacity-[0.04] hover:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:shadow-none focus:outline-none focus:ring-0 focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] checked:focus:border-primary checked:focus:before:scale-100 checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] dark:border-neutral-600 dark:checked:border-primary dark:checked:after:border-primary dark:checked:after:bg-primary dark:focus:before:shadow-[0px_0px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:border-primary dark:checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca]"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio1"
+      value="option1"
+    />
+    <label
+      class="mt-px inline-block pl-[0.15rem] hover:cursor-pointer"
+      for="inlineRadio1"
+      >Delivery</label
+    >
+  </div>
+
+  <!--Second radio-->
+  <div class="mb-[0.125rem] mr-10 inline-block min-h-[1.5rem] pl-[1.5rem]">
+    <input
+      class="relative float-left -ml-[1.5rem] mr-1 mt-0.5 h-5 w-5 appearance-none rounded-full border-2 border-solid border-neutral-300 before:pointer-events-none before:absolute before:h-4 before:w-4 before:scale-0 before:rounded-full before:bg-transparent before:opacity-0 before:shadow-[0px_0px_0px_13px_transparent] before:content-[''] after:absolute after:z-[1] after:block after:h-4 after:w-4 after:rounded-full after:content-[''] checked:border-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:left-1/2 checked:after:top-1/2 checked:after:h-[0.625rem] checked:after:w-[0.625rem] checked:after:rounded-full checked:after:border-primary checked:after:bg-primary checked:after:content-[''] checked:after:[transform:translate(-50%,-50%)] hover:cursor-pointer hover:before:opacity-[0.04] hover:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:shadow-none focus:outline-none focus:ring-0 focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] checked:focus:border-primary checked:focus:before:scale-100 checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] dark:border-neutral-600 dark:checked:border-primary dark:checked:after:border-primary dark:checked:after:bg-primary dark:focus:before:shadow-[0px_0px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:border-primary dark:checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca]"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio2"
+      value="option2"
+    />
+    <label
+      class="mt-px inline-block pl-[0.15rem] hover:cursor-pointer"
+      for="inlineRadio2"
+      >Retirar</label
+    >
+  </div>
+
+  <!--Third radio (disabled)-->
+  <div class="mb-[0.125rem] inline-block min-h-[1.5rem] pl-[1.5rem]">
+    <input
+      class="relative float-left -ml-[1.5rem] mr-1 mt-0.5 h-5 w-5 appearance-none rounded-full border-2 border-solid border-neutral-300 before:pointer-events-none before:absolute before:h-4 before:w-4 before:scale-0 before:rounded-full before:bg-transparent before:opacity-0 before:shadow-[0px_0px_0px_13px_transparent] before:content-[''] after:absolute after:z-[1] after:block after:h-4 after:w-4 after:rounded-full after:content-[''] checked:border-primary checked:before:opacity-[0.16] checked:after:absolute checked:after:left-1/2 checked:after:top-1/2 checked:after:h-[0.625rem] checked:after:w-[0.625rem] checked:after:rounded-full checked:after:border-primary checked:after:bg-primary checked:after:content-[''] checked:after:[transform:translate(-50%,-50%)] hover:before:opacity-[0.04] hover:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:shadow-none focus:outline-none focus:ring-0 focus:before:scale-100 focus:before:opacity-[0.12] focus:before:shadow-[0px_0px_0px_13px_rgba(0,0,0,0.6)] focus:before:transition-[box-shadow_0.2s,transform_0.2s] checked:focus:border-primary checked:focus:before:scale-100 checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca] checked:focus:before:transition-[box-shadow_0.2s,transform_0.2s] disabled:opacity-60 dark:border-neutral-600 dark:checked:border-primary dark:checked:after:border-primary dark:checked:after:bg-primary dark:focus:before:shadow-[0px_0px_0px_13px_rgba(255,255,255,0.4)] dark:checked:focus:border-primary dark:checked:focus:before:shadow-[0px_0px_0px_13px_#3b71ca]"
+      type="radio"
+      name="inlineRadioOptions"
+      id="inlineRadio3"
+      value="option3"
+      disabled
+    />
+    <label
+      class="mt-px inline-block pl-[0.15rem] opacity-50 hover:pointer-events-none"
+      for="inlineRadio3"
+      >Drone (disabled)</label
+    >
+  </div>
+</div>
+<div class=""></div>
+<h1 class="text-black font-bold text-xl mb-6">Qual a forma de pagamento?</h1>
+<div class="flex">
+  <div class="textarea h-20 bg-red-600">
+    <div>Com maquininha</div>
+    <div>Na entrega ou retirada do seu pedido.</div>
+  </div>
+  <div></div>
+</div>
+<h1 class="text-black font-bold text-xl mb-6">Observações</h1>
+<textarea
+  placeholder="ex: Bem gelado por favor... e cuidado com a embalagem..."
+  class="textarea textarea-bordered textarea-lg w-full max-w-xl"
+></textarea>
 
 <ul>
   <li *ngFor="let product of products()" class="flex gap-1">
@@ -7,4 +72,6 @@
   </li>
 </ul>
 
-<button (click)="clearShoppingCart()">Limpar carrinho</button>
+<a href="#!" class="underline" (click)="clearShoppingCart()"
+  >Limpar itens do carrinho</a
+>
